# cosmos-dex

./: .env  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  DEVELOPER-GUIDE.md  Dockerfile.build  Makefile  README-BUILD-FIX.md  README.md  _headers  build-contracts.sh  build-for-hub.sh  build-optimized.sh  build-simple.sh  build-workspace-optimized.sh  deploy-mainnet.sh  deploy-simple-counter.js  deploy-updated-contract.sh  docker-compose.yml  index.html  optimize-contract.sh  package-lock.json  package.json  simple-build.sh  vite.config.ts
contracts/: Cargo.toml  README.md
contracts/dex-contract/: Cargo.toml
contracts/dex-contract/examples/: schema.rs
contracts/dex-contract/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
docs/: atom-fees-guide.md  deployment-guide.md
frontend/: .env.example  README.md  _redirects  index.html  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  config.js
frontend/src/components/: Header.js
public/: assetlist.json  pairs.json
scripts/: Dockerfile  deploy.js  deploy.sh  generate-keys.js  generate-keys.sh  package-lock.json  package.json
src/: App.jsx  config.js
src/components/: Header.jsx  LPTokenGenerator.jsx  LiquidityInterface.js  LiquidityInterface.jsx  PoolsInterface.jsx  SwapInterface.js  SwapInterface.jsx  TokenLaunchpad.jsx  TokenManager.jsx  TokenSelector.jsx
src/hooks/: useDex.js  useKeplr.js
src/services/: cw20Service.js  lpTokenService.js  tokenRegistry.js
