[package]
name = "dex-contract"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["contract"]
contract = []
interface = ["export"]
export = []

[dependencies]
cosmwasm-std = { version = "1.4", features = ["staking", "stargate"] }
cosmwasm-schema = "1.4"
cw-storage-plus = "1.1"
cw2 = "1.1"
cw20 = "1.1"
cw20-base = { version = "1.1", features = ["library"] }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cw-multi-test = "0.17"
cosmwasm-schema = "1.4"