[package]
name = "dex-contract"
version = "0.1.0"
authors = ["Cosmos DEX Team"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking", "stargate"] }
cosmwasm-schema = "1.0.0"
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cw-multi-test = "0.13.4"
cosmwasm-schema = "1.0.0"